force-app/main/default/objects/Welcome_Calling_Details__c/Welcome_Calling_Details__c.object-meta.xml
<CustomObject>
    <label>Welcome Calling Details</label>
    <nameField>
        <displayFormat>WCD-{00000}</displayFormat>
        <label>Welcome Calling Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Welcome Calling Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>