force-app/main/default/objects/Welcome_Calling_Details__c/fields/After_you_applied_through_app_How_long__c.field-meta.xml
<CustomField>
    <fullName>After_you_applied_through_app_How_long__c</fullName>
    <label>After you applied through app, How long</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 Min</fullName>
            </value>
            <value>
                <fullName>30 Min</fullName>
            </value>
            <value>
                <fullName>1 Hour</fullName>
            </value>
            <value>
                <fullName>2 Hours</fullName>
            </value>
            <value>
                <fullName>5 Hours</fullName>
            </value>
            <value>
                <fullName>8 Hours</fullName>
            </value>
            <value>
                <fullName>12 Hours</fullName>
            </value>
            <value>
                <fullName>1 Day</fullName>
            </value>
            <value>
                <fullName>2 Days</fullName>
            </value>
            <value>
                <fullName>3 Days</fullName>
            </value>
            <value>
                <fullName>5 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>