force-app/main/default/objects/Welcome_Calling_Details__c/fields/Any_feedback_from_the_customer_regarding__c.field-meta.xml
<CustomField>
    <fullName>Any_feedback_from_the_customer_regarding__c</fullName>
    <label>Any feedback from the customer regarding</label>
    <type>TextArea</type>
</CustomField>