force-app/main/default/objects/Welcome_Calling_Details__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Welcome Calling Details</relationshipLabel>
    <relationshipName>Welcome_Calling_Details</relationshipName>
    <type>Lookup</type>
</CustomField>