force-app/main/default/objects/Welcome_Calling_Details__c/fields/Curr_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Curr_Pincode__c</fullName>
    <label>Curr Pincode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>