force-app/main/default/objects/Welcome_Calling_Details__c/fields/Curr_State__c.field-meta.xml
<CustomField>
    <fullName>Curr_State__c</fullName>
    <label>Curr State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>