force-app/main/default/objects/Welcome_Calling_Details__c/fields/Customer_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Mobile_Number__c</fullName>
    <label>Customer Mobile Number</label>
    <type>Phone</type>
</CustomField>