force-app/main/default/objects/Welcome_Calling_Details__c/fields/Customer_number__c.field-meta.xml
<CustomField>
    <fullName>Customer_number__c</fullName>
    <label>Customer number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>