force-app/main/default/objects/Welcome_Calling_Details__c/fields/Did_u_download_the_app_on_your_own_or_th__c.field-meta.xml
<CustomField>
    <fullName>Did_u_download_the_app_on_your_own_or_th__c</fullName>
    <label>Did u download the app on your own or th</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QR Code</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>PlayStore</fullName>
            </value>
            <value>
                <fullName>Teacher</fullName>
            </value>
            <value>
                <fullName>NACL Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>