force-app/main/default/objects/Welcome_Calling_Details__c/fields/Did_u_get_all_the_information_of_the_loa__c.field-meta.xml
<CustomField>
    <fullName>Did_u_get_all_the_information_of_the_loa__c</fullName>
    <label>Did u get all the information of the loa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>