force-app/main/default/objects/Welcome_Calling_Details__c/fields/Did_you_get_a_welcome_call_from_the_insu__c.field-meta.xml
<CustomField>
    <fullName>Did_you_get_a_welcome_call_from_the_insu__c</fullName>
    <label>Did you get a welcome call from the insu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>