force-app/main/default/objects/Welcome_Calling_Details__c/fields/Did_you_get_the_sanction_letter_and_loan__c.field-meta.xml
<CustomField>
    <fullName>Did_you_get_the_sanction_letter_and_loan__c</fullName>
    <label>Did you get the sanction letter and loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Did not check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>