force-app/main/default/objects/Welcome_Calling_Details__c/fields/Did_you_know_how_to_navigate_the_app__c.field-meta.xml
<CustomField>
    <fullName>Did_you_know_how_to_navigate_the_app__c</fullName>
    <label>Did you know how to navigate the app?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>