force-app/main/default/objects/Welcome_Calling_Details__c/fields/Do_you_know_your_repayment_date__c.field-meta.xml
<CustomField>
    <fullName>Do_you_know_your_repayment_date__c</fullName>
    <label>Do you know your repayment date?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>