force-app/main/default/objects/Welcome_Calling_Details__c/fields/Does_the_institute_make_EMI_payments_to__c.field-meta.xml
<CustomField>
    <fullName>Does_the_institute_make_EMI_payments_to__c</fullName>
    <label>Does the institute make EMI payments to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>