force-app/main/default/objects/Welcome_Calling_Details__c/fields/Does_the_institute_notify_students_that__c.field-meta.xml
<CustomField>
    <fullName>Does_the_institute_notify_students_that__c</fullName>
    <label>Does the institute notify students that</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>