force-app/main/default/objects/Welcome_Calling_Details__c/fields/EMI_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>EMI_Start_Date__c</fullName>
    <label>EMI Start Date</label>
    <type>Date</type>
</CustomField>