force-app/main/default/objects/Welcome_Calling_Details__c/fields/Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name__c</fullName>
    <label>Entity Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>