force-app/main/default/objects/Welcome_Calling_Details__c/fields/Feedback_required_if_any_difficulty_men__c.field-meta.xml
<CustomField>
    <fullName>Feedback_required_if_any_difficulty_men__c</fullName>
    <label>Feedback required, if any difficulty men</label>
    <type>TextArea</type>
</CustomField>