force-app/main/default/objects/Welcome_Calling_Details__c/fields/For_low_score_Between_1_6_require_rea__c.field-meta.xml
<CustomField>
    <fullName>For_low_score_Between_1_6_require_rea__c</fullName>
    <label>(For low score (Between 1-6) require rea</label>
    <type>TextArea</type>
</CustomField>