force-app/main/default/objects/Welcome_Calling_Details__c/fields/For_the_loan_you_have_taken_we_have_sent__c.field-meta.xml
<CustomField>
    <fullName>For_the_loan_you_have_taken_we_have_sent__c</fullName>
    <label>For the loan you have taken we have sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not checked Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>