force-app/main/default/objects/Welcome_Calling_Details__c/fields/Have_you_received_the_sanction_letter__c.field-meta.xml
<CustomField>
    <fullName>Have_you_received_the_sanction_letter__c</fullName>
    <label>Have you received the sanction letter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not checked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>