force-app/main/default/objects/Welcome_Calling_Details__c/fields/How_did_you_get_to_know_about_NACL__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_get_to_know_about_NACL__c</fullName>
    <label>How did you get to know about NACL ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Institute</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>NACL Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>