force-app/main/default/objects/Welcome_Calling_Details__c/fields/How_was_your_interaction_with_Northern_A__c.field-meta.xml
<CustomField>
    <fullName>How_was_your_interaction_with_Northern_A__c</fullName>
    <label>How was your interaction with Northern A</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>