force-app/main/default/objects/Welcome_Calling_Details__c/fields/if_anyone_asks_for_cash_payments_Require__c.field-meta.xml
<CustomField>
    <fullName>if_anyone_asks_for_cash_payments_Require__c</fullName>
    <label>if anyone asks for cash payments Require</label>
    <length>100</length>
    <type>Text</type>
</CustomField>