force-app/main/default/objects/Welcome_Calling_Details__c/fields/If_below_6_capture_the_reason__c.field-meta.xml
<CustomField>
    <fullName>If_below_6_capture_the_reason__c</fullName>
    <label>If below 6 capture the reason</label>
    <type>TextArea</type>
</CustomField>