force-app/main/default/objects/Welcome_Calling_Details__c/fields/If_yes_can_you_give_us_a_minimum_of_2_r__c.field-meta.xml
<CustomField>
    <fullName>If_yes_can_you_give_us_a_minimum_of_2_r__c</fullName>
    <label>If yes, can you give us a minimum of 2 r</label>
    <type>TextArea</type>
</CustomField>