force-app/main/default/objects/Welcome_Calling_Details__c/fields/If_Yes_capture_name_and_amount__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_capture_name_and_amount__c</fullName>
    <label>If Yes capture name and amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>