force-app/main/default/objects/Welcome_Calling_Details__c/fields/Installment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Installment_Frequency__c</fullName>
    <label>Installment Frequency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>