force-app/main/default/objects/Welcome_Calling_Details__c/fields/Institute__c.field-meta.xml
<CustomField>
    <fullName>Institute__c</fullName>
    <label>Institute</label>
    <length>100</length>
    <type>Text</type>
</CustomField>