force-app/main/default/objects/Welcome_Calling_Details__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>