force-app/main/default/objects/Welcome_Calling_Details__c/fields/Is_the_institute_offering_a_stipend_to_t__c.field-meta.xml
<CustomField>
    <fullName>Is_the_institute_offering_a_stipend_to_t__c</fullName>
    <label>Is the institute offering a stipend to t</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>