force-app/main/default/objects/Welcome_Calling_Details__c/fields/Last_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Installment_Date__c</fullName>
    <label>Last Installment Date</label>
    <type>Date</type>
</CustomField>