force-app/main/default/objects/Welcome_Calling_Details__c/fields/Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>Loan_Account__c</fullName>
    <label>Loan Account</label>
    <length>80</length>
    <type>Text</type>
</CustomField>