force-app/main/default/objects/Welcome_Calling_Details__c/fields/Loan_ID__c.field-meta.xml
<CustomField>
    <fullName>Loan_ID__c</fullName>
    <label>Loan ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>