force-app/main/default/objects/Welcome_Calling_Details__c/fields/Loan_number__c.field-meta.xml
<CustomField>
    <fullName>Loan_number__c</fullName>
    <label>Loan number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>