force-app/main/default/objects/Welcome_Calling_Details__c/fields/Loan_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Loan_Tenure__c</fullName>
    <label>Loan Tenure</label>
    <length>100</length>
    <type>Text</type>
</CustomField>