force-app/main/default/objects/Welcome_Calling_Details__c/fields/May_I_understand_how_long_it_took_to_co__c.field-meta.xml
<CustomField>
    <fullName>May_I_understand_how_long_it_took_to_co__c</fullName>
    <label>May I understand, how long it took to co</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 Min</fullName>
            </value>
            <value>
                <fullName>30 Min</fullName>
            </value>
            <value>
                <fullName>1 Hour</fullName>
            </value>
            <value>
                <fullName>2 Hours</fullName>
            </value>
            <value>
                <fullName>5 Hours</fullName>
            </value>
            <value>
                <fullName>8 Hours</fullName>
            </value>
            <value>
                <fullName>12 Hours</fullName>
            </value>
            <value>
                <fullName>1 Day</fullName>
            </value>
            <value>
                <fullName>2 Days</fullName>
            </value>
            <value>
                <fullName>3 Days</fullName>
            </value>
            <value>
                <fullName>5 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>