force-app/main/default/objects/Welcome_Calling_Details__c/fields/Moratorium_Period__c.field-meta.xml
<CustomField>
    <fullName>Moratorium_Period__c</fullName>
    <label>Moratorium Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>