force-app/main/default/objects/Welcome_Calling_Details__c/fields/Number_Of_Calls_Dialed__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Calls_Dialed__c</fullName>
    <label>Number Of Calls Dialed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>