force-app/main/default/objects/Welcome_Calling_Details__c/fields/Office_Code__c.field-meta.xml
<CustomField>
    <fullName>Office_Code__c</fullName>
    <label>Office Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>