force-app/main/default/objects/Welcome_Calling_Details__c/fields/Office_Name__c.field-meta.xml
<CustomField>
    <fullName>Office_Name__c</fullName>
    <label>Office Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>