force-app/main/default/objects/Welcome_Calling_Details__c/fields/Officer_Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Officer_Employee_Number__c</fullName>
    <label>Officer Employee Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>