force-app/main/default/objects/Welcome_Calling_Details__c/fields/Officer_Name__c.field-meta.xml
<CustomField>
    <fullName>Officer_Name__c</fullName>
    <label>Officer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>