force-app/main/default/objects/Welcome_Calling_Details__c/fields/Pre_EMI__c.field-meta.xml
<CustomField>
    <fullName>Pre_EMI__c</fullName>
    <label>Pre EMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>