force-app/main/default/objects/Welcome_Calling_Details__c/fields/Product_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest_Rate__c</fullName>
    <label>Product Interest Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>