force-app/main/default/objects/Welcome_Calling_Details__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Family</valueSetName>
    </valueSet>
</CustomField>