force-app/main/default/objects/Welcome_Calling_Details__c/fields/Residence_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Residence_Phone_Number__c</fullName>
    <label>Residence Phone Number</label>
    <type>Phone</type>
</CustomField>