force-app/main/default/objects/Welcome_Calling_Details__c/fields/Skill_career__c.field-meta.xml
<CustomField>
    <fullName>Skill_career__c</fullName>
    <label>Skill career</label>
    <length>100</length>
    <type>Text</type>
</CustomField>