force-app/main/default/objects/Welcome_Calling_Details__c/fields/Was_it_easy_to_apply_loan_through_our_br__c.field-meta.xml
<CustomField>
    <fullName>Was_it_easy_to_apply_loan_through_our_br__c</fullName>
    <label>Was it easy to apply loan through our br</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>