force-app/main/default/objects/Welcome_Calling_Details__c/fields/Were_you_informed_of_life_cover_critical__c.field-meta.xml
<CustomField>
    <fullName>Were_you_informed_of_life_cover_critical__c</fullName>
    <label>Were you informed of life cover critical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>