force-app/main/default/objects/Welcome_Calling_Details__c/fields/What_is_the_loan_amount_received__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_loan_amount_received__c</fullName>
    <label>What is the loan amount received</label>
    <length>100</length>
    <type>Text</type>
</CustomField>