force-app/main/default/objects/Welcome_Calling_Details__c/fields/Where_you_provided_assistance_from_NACL__c.field-meta.xml
<CustomField>
    <fullName>Where_you_provided_assistance_from_NACL__c</fullName>
    <label>Where you provided assistance from NACL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>