force-app/main/default/objects/Welcome_Calling_Details__c/fields/Will_you_recommend_NAC_to_others__c.field-meta.xml
<CustomField>
    <fullName>Will_you_recommend_NAC_to_others__c</fullName>
    <label>Will you recommend NAC to others?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>