force-app/main/default/objects/Welcome_Calling_Details__c/recordTypes/Welcome_Calling_Details_Altifi.recordType-meta.xml
<RecordType>
    <fullName>Welcome_Calling_Details_Altifi</fullName>
    <active>true</active>
    <label>Welcome Calling Details - Altifi</label>
</RecordType>