force-app/main/default/objects/Welcome_Calling_Details__c/recordTypes/Welcome_Calling_Details_DO.recordType-meta.xml
<RecordType>
    <fullName>Welcome_Calling_Details_DO</fullName>
    <active>true</active>
    <label>Welcome Calling Details - DO</label>
</RecordType>