force-app/main/default/objects/Welcome_Calling_Details__c/recordTypes/Welcome_Calling_Details_EL.recordType-meta.xml
<RecordType>
    <fullName>Welcome_Calling_Details_EL</fullName>
    <active>true</active>
    <label>Welcome Calling Details - EL</label>
</RecordType>