force-app/main/default/objects/Welcome_Calling_Details__c/recordTypes/Welcome_Calling_Details_LAP.recordType-meta.xml
<RecordType>
    <fullName>Welcome_Calling_Details_LAP</fullName>
    <active>true</active>
    <label>Welcome Calling Details - LAP</label>
</RecordType>