force-app/main/default/objects/Welcome_Calling_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Mobile_Number__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Loan_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>